--- a/src/app/components/certificates/certificate-template/certificate-template.component.html
+++ b/src/app/components/certificates/certificate-template/certificate-template.component.html
@@ -176,23 +176,8 @@
         </form>
       </div>
       <div class="col-lg-5">
-        <img src="data:image/png;base64,{{imageData}}" alt="Certificate Preview" width="100%" />
-        <div class="box-area preview-area">
-            <div class="row">
-               <div class="col-3">
-                 <h3>Logo</h3>
-               </div>
-               <div class="col-9">
-                 <h2>ORGANIZATION TITLE</h2>
-                 <h4 class="mb-5">...INSPITING, INNOVATING, iNTEGRATING</h4>
-                 <h5 class="pb-5">DEAR (TITLE) Name </h5>
-                 <p>SOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME TEXT FOR SOMEONESOME </p>
-
-                 <h4>Siencerely.</h4>
-                 <h5>SIGNATOURY</h5>
-                 <h5>DESIGNATION</h5>
-               </div>
-            </div>
+        <div class="border p-3 mb-3">
+          <img src="data:image/png;base64,{{imageData}}" alt="Certificate Preview" width="100%" />
         </div>
         <div class="help-area">
           <div class="table-container">
