--- a/src/app/components/custom-pagination/custom-pagination.component.html
+++ b/src/app/components/custom-pagination/custom-pagination.component.html
@@ -2,7 +2,7 @@
   <div class="row align-items-center" *ngIf="page">
     <div class="col" style="float: right; font-weight: 600;">
       Showing {{ page.number+1   }}
-    - {{ ((page.number+1) * page.size) }} of {{page.totalElements}}
+    -  of {{page.totalElements}}
     <span class="ml-1">{{pageName}}</span>
     </div>
 
