--- a/src/app/components/certificates/certificates.component.css
+++ b/src/app/components/certificates/certificates.component.css
@@ -208,3 +208,27 @@ a.disabled {
   }
 
 }
+
+.archived{
+  opacity: .5;
+}
+
+.archived td:first-child{
+  padding-left: 25px !important;
+}
+
+.archive_active{
+  background: #ccc2c21c;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 10;
+  padding-top: 12px;
+  padding-left: 5px;
+  display: none;
+}
+.archived .archive_active {
+  display: block;
+}
