--- a/src/app/components/certificates/certificates.component.html
+++ b/src/app/components/certificates/certificates.component.html
@@ -35,9 +35,20 @@
                       <h6>Certificate Name</h6>
                     </th>
                   </tr>
-                  <tr *ngFor="let element of unReleasedJobsDataSource">
+                  <tr *ngFor="let element of unReleasedJobsDataSource" [ngClass]="{archived: element.deleted_at !== null}">
                     <td>
-                      {{element.updatedAt|dateAgo}}
+                      {{element.updated_at|dateAgo}}
+                      <div class="archive_active">
+                        <!-- <i class="fas fa-file-download"></i> -->
+                        <svg id="archive-24px" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+                          <g id="Group_4170" data-name="Group 4170">
+                            <rect id="Rectangle_121" data-name="Rectangle 121" width="18" height="18" fill="none"/>
+                          </g>
+                          <g id="Group_4171" data-name="Group 4171">
+                            <path id="Path_231" data-name="Path 231" d="M20.54,5.23,19.15,3.55A1.451,1.451,0,0,0,18,3H6a1.486,1.486,0,0,0-1.16.55L3.46,5.23A1.958,1.958,0,0,0,3,6.5V19a2.006,2.006,0,0,0,2,2H19a2.006,2.006,0,0,0,2-2V6.5A1.958,1.958,0,0,0,20.54,5.23Zm-5.39,9.62-2.79,2.79a.5.5,0,0,1-.71,0L8.86,14.85A.5.5,0,0,1,9.21,14H11V11a1,1,0,0,1,2,0v3h1.79A.5.5,0,0,1,15.15,14.85ZM5.12,5l.81-1h12l.94,1Z" fill="#707070"/>
+                          </g>
+                        </svg>                            
+                      </div>
                     </td>
                     <!-- <td>
                       {{element.status}}
@@ -97,12 +108,34 @@
                       </th>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let element of releasedJobsDataSource">
+                      <tr *ngFor="let element of releasedJobsDataSource" [ngClass]="{archived: element.deleted_at !== null}">
                         <td *ngIf="element.last_released_on">
                           {{ element.last_released_on|dateAgo}}
+                          <div class="archive_active">
+                            <!-- <i class="fas fa-file-download"></i> -->
+                            <svg id="archive-24px" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+                              <g id="Group_4170" data-name="Group 4170">
+                                <rect id="Rectangle_121" data-name="Rectangle 121" width="18" height="18" fill="none"/>
+                              </g>
+                              <g id="Group_4171" data-name="Group 4171">
+                                <path id="Path_231" data-name="Path 231" d="M20.54,5.23,19.15,3.55A1.451,1.451,0,0,0,18,3H6a1.486,1.486,0,0,0-1.16.55L3.46,5.23A1.958,1.958,0,0,0,3,6.5V19a2.006,2.006,0,0,0,2,2H19a2.006,2.006,0,0,0,2-2V6.5A1.958,1.958,0,0,0,20.54,5.23Zm-5.39,9.62-2.79,2.79a.5.5,0,0,1-.71,0L8.86,14.85A.5.5,0,0,1,9.21,14H11V11a1,1,0,0,1,2,0v3h1.79A.5.5,0,0,1,15.15,14.85ZM5.12,5l.81-1h12l.94,1Z" fill="#707070"/>
+                              </g>
+                            </svg>                            
+                          </div>
                         </td>
                         <td *ngIf="!element.last_released_on">
                           {{ element.created_at|dateAgo}}
+                          <div class="archive_active">
+                            <!-- <i class="fas fa-file-download"></i> -->
+                            <svg id="archive-24px" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+                              <g id="Group_4170" data-name="Group 4170">
+                                <rect id="Rectangle_121" data-name="Rectangle 121" width="18" height="18" fill="none"/>
+                              </g>
+                              <g id="Group_4171" data-name="Group 4171">
+                                <path id="Path_231" data-name="Path 231" d="M20.54,5.23,19.15,3.55A1.451,1.451,0,0,0,18,3H6a1.486,1.486,0,0,0-1.16.55L3.46,5.23A1.958,1.958,0,0,0,3,6.5V19a2.006,2.006,0,0,0,2,2H19a2.006,2.006,0,0,0,2-2V6.5A1.958,1.958,0,0,0,20.54,5.23Zm-5.39,9.62-2.79,2.79a.5.5,0,0,1-.71,0L8.86,14.85A.5.5,0,0,1,9.21,14H11V11a1,1,0,0,1,2,0v3h1.79A.5.5,0,0,1,15.15,14.85ZM5.12,5l.81-1h12l.94,1Z" fill="#707070"/>
+                              </g>
+                            </svg>                            
+                          </div>
                         </td>
                         <td>
                           {{element.certificateTemplateName}}
@@ -158,7 +191,7 @@
               </button>
               <div class="table-container mt-5 certificate_templates_wrap_Box">
                 <div class="row certificate_templates_wrap">
-                  <div class="col-small" *ngFor="let element of templatesData;">
+                  <div class="col-small" *ngFor="let element of templatesData;" [ngClass]="{archived: element.deleted_at !== null}">
                     <div class="certificateSingle">
                       <img *ngIf="element.certificate_image_thumbnail; else noImage"
                         src="data:image/jpg;base64,{{element.certificate_image_thumbnail.data}}" alt="">
