--- a/src/app/components/certificates/certificate-template/certificate-template.component.css
+++ b/src/app/components/certificates/certificate-template/certificate-template.component.css
@@ -16,3 +16,11 @@ body {
 .btn-orange-rounded {
   margin-right: 1rem;
 }
+
+.help-area .table{
+   width: 100%;
+}
+
+.help-area .table-rounded td {
+  font-size: 12px;
+}
