--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -108,7 +108,7 @@
                           style="padding: 0; position: relative; z-index: 1000000; border-radius: 50%; box-shadow: none; line-height: normal; min-width: 0;"
                           mat-raised-button
                           matTooltip="Number of recipients with this field value filled. Click on the recipient no to view those recipients."
-                          mat-tooltip-panel-bellow >
+                          mat-tooltip-panel-left >
 
                           {{element.name}}
                         </button>  
