--- a/src/styles.css
+++ b/src/styles.css
@@ -912,7 +912,7 @@ th[mat-sort-header] .mat-sort-header-stem
   }
   .btn.back{
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     margin-bottom: 10px;
   }
 
