--- a/src/app/components/admin-profile/admin-profile.component.css
+++ b/src/app/components/admin-profile/admin-profile.component.css
@@ -101,12 +101,14 @@
    align-items: center;
    margin-bottom: 35px;
 }
+
 .upgrade_plan .header h2{
    font-size: 40px;
    font-weight: bolder;
    font-family: Bahnschrift;
    margin-bottom: 0;
 }
+
 .upgrade_plan .header p{
    color: #CACACA;
    font-size: 20px;
@@ -117,8 +119,8 @@
 .upgrade_plan .body h4{
   font-size: 18px;
   font-weight: 400;
-
 }
+
 .upgrade_plan .body p{
   color: #CACACA;
   font-size: 15px;
@@ -128,3 +130,33 @@
 .upgrade_plan .body i{
     font-size: 40px;
 }
+
+@media(max-width:766px){
+   .email_limit{
+      padding-left: 0;
+      margin-top: 15px;
+   }
+
+   .mobile_design{
+      display: block !important;
+      margin-top: 10px;
+   }
+
+   .mobile_design .btn-orange-outline{
+      width: 100%;
+      margin-bottom: 10px;
+   }
+
+   .mobile_design .btn-orange-outline{
+      width: 100%;
+   }
+
+   .profile-area{
+      padding: 15px;
+   }
+   .upgrade_plan{
+      padding: 50px 20px;
+   }
+
+}
+
