--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -93,8 +93,8 @@
 
 
     <div class="upgrade_plan mt-5">
-      <div class="row header">
-        <div class="col">
+      <div class="row header mb-5">
+        <div class="col mb-3">
           <div class="row px-3">
             <div class="col-auto">
               <img src="../../../assets/logo-h.png" alt="">
@@ -105,8 +105,8 @@
             </div>
           </div>
         </div>
-        <div class="col-auto">
-          <button class="btn-orange-rounded pl-5 pr-5 pt-3 pb-3">
+        <div class="col-md-auto">
+          <button class="btn-orange-rounded w-100 pl-5 pr-5 pt-3 pb-3">
             <svg xmlns="http://www.w3.org/2000/svg" width="21.829" height="21.829" viewBox="0 0 21.829 21.829">
               <g id="local_police-24px" transform="translate(-0.864 -0.543)">
                 <rect id="Rectangle_109" data-name="Rectangle 109" width="21.829" height="21.829"
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="row body">
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
           <div class="row px-3">
             <div class="col-auto icon">
               <i class="fas fa-shield-alt"></i>
@@ -132,7 +132,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
           <div class="row px-3">
             <div class="col-auto icon">
               <i class="fas fa-lock"></i>
