--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-6">
   <div class="profile-area">
     <div class="profile-header row align-items-center">
-      <div class="col d-flex align-items-center">
+      <div class="col mb-3 d-flex align-items-center">
         <a href="#" class="back"><i class="fas fa-arrow-left"></i></a>
         <h3>Help & Support</h3>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <div class="custom-group">
           <input class="custom-form-control search" type="text" placeholder="Search for your question">
           <span class="search-icon">
