--- a/src/styles.css
+++ b/src/styles.css
@@ -952,3 +952,10 @@ th[mat-sort-header] .mat-sort-header-stem
   position: relative;
 }
 
+.archived .hover_details .actiion_list .btn-orange-outline-border{
+    display: none;
+}
+
+.archived .hover_details .actiion_list li:last-child .btn-orange-outline-border{
+    display: inline-block;
+}
